# fedimintd-mobile

./: .gitignore  LICENSE  README.md  flake.nix  justfile  pubspec.yaml  zapstore.yaml
.github/actions/android-build/: action.yml
.github/workflows/: android-debug.yml  android-release.yml  checks.yml  test.yml
android/: gradle_logs.out  gradle_logs2.out
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/carbine/: MainActivity.kt
android/app/src/main/kotlin/io/fedimintd/: MainActivity.kt
docker/: Dockerfile  build-apk.sh  entrypoint.sh
docs/: contributing.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: backup_service.dart  battery_disclaimer_screen.dart  bitcoind.dart  blockchain_config.dart  blockchain_config_base.dart  esplora.dart  fedimintd.dart  foreground_service.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  main.dart  onboarding.dart  recovery_service.dart  setup_choice_screen.dart  startup_screen.dart  utils.dart  webview_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
metadata/: org.fedimint.mobile.yml
metadata/en-US/: full_description.txt  short_description.txt
metadata/en-US/changelogs/: 10190.txt  10290.txt  10390.txt  10590.txt  10690.txt  10890.txt  20090.txt
rust/fedimintd_mobile/: Cargo.toml  build.rs  build.sh
rust/fedimintd_mobile/src/: frb_generated.rs  lib.rs
scripts/: build-android.sh  build-arm-android.sh  build-fdroid.sh  build-linux.sh  build-rust-fdroid.sh  release.sh  test-fdroid.sh
scripts/git-hooks/: pre-commit.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
