[package]
name = "fedimintd_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
esplora-client = { version = "0.12.0", default-features = false, features = [
  "async-https-rustls",
  "async",
  "tokio",
] }
fedimint-core = { git = "https://github.com/m1sterc001guy/fedimint", branch = "qr_setup5" }
fedimintd = { git = "https://github.com/m1sterc001guy/fedimint", branch = "qr_setup5" }
flutter_rust_bridge = "=2.9.0"
libc = "0.2"

[build-dependencies]
fedimint-build = { git = "https://github.com/m1sterc001guy/fedimint", branch = "qr_setup5" }

[profile.dev.package]
tikv-jemalloc-sys = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}
