[package]
name = "fedimintd_mobile"
version = "0.1.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
esplora-client = { version = "0.12.0", default-features = false, features = [
  "async-https-rustls",
  "async",
  "tokio",
] }
fedimint-aead = "0.10.0"
fedimint-api-client = "0.10.0"
fedimint-connectors = "0.10.0"
fedimint-core = "0.10.0"
fedimintd = "0.10.0"
flutter_rust_bridge = "=2.9.0"
libc = "0.2"

[build-dependencies]
fedimint-build = "0.10.0"

[profile.dev.package]
tikv-jemalloc-sys = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}
